# tightening_project

./: pyproject.toml
data/lake/gold/_meta/asof=2025-11/: gold_build_meta.json
data/lake/silver/year=2025/month=01/: part-0000.parquet
data/lake/silver/year=2025/month=02/: part-0000.parquet
data/lake/silver/year=2025/month=03/: part-0000.parquet
data/lake/silver/year=2025/month=04/: part-0000.parquet
data/lake/silver/year=2025/month=05/: part-0000.parquet
data/lake/silver/year=2025/month=06/: part-0000.parquet
data/lake/silver/year=2025/month=07/: part-0000.parquet
data/lake/silver/year=2025/month=08/: part-0000.parquet
data/lake/silver/year=2025/month=09/: part-0000.parquet
data/lake/silver/year=2025/month=10/: part-0000.parquet
notebooks/: 01_EDA _A.ipynb  01_data_audit.ipynb  02_stats_spc.ipynb  capability_test.ipynb  test_discovery.ipynb  test_spc_.ipynb
src/tightening_project/: cache.py  config.py  paths.py
src/tightening_project/analysis/: capability.py  spc.py
src/tightening_project/analysis/features/: __init__.py  base.py  datasets.py  labels.py  spc_derived.py  temporal.py
src/tightening_project/data/: cleaning.py  loader.py  schema.py  schema_raw.py  schema_silver.py
src/tightening_project/data/cleaning/: __init__.py  clean_torque.py  constant.py  helpers.py
src/tightening_project/data/io/: bronze.py  discovery.py  gold.py  naming.py  silver.py
src/tightening_project/features/: build.py
tests/: test_bronze.py  test_gold_smoke.py  test_naming.py  test_silver_cleaning.py  test_silver_schema.py
(+50 files in other folders)
